# BeatHit-Dataset

./: .env.example  .gitattributes  .gitignore  BeatHit-Vocaloid-Culture-Languages-v2.patch  BeatHit-Vocaloid-Culture-Languages-v3.patch  BeatHit-actions-build-fix-v2.patch  BeatHit-empty-lists-1000.patch  BeatHit-pandas-fallback-hotfix.patch  BeatHit-remaining-data-fixes.patch  LICENSE  MANUAL_UPLOAD.md  README.md  STATUS.json  pyproject.toml  requirements-full.txt  requirements.txt
.github/workflows/: full-build.yml  validate.yml
data/: BUILD_REPORT.json  MANIFEST.json  README.md  complete_validation.txt  coverage_report.csv  target_report.json
data/anime/: anime_songs.csv
data/countries/: README.md  ae_ae_top1000.csv  ar_ar_top1000.csv  at_at_top1000.csv  au_au_top1000.csv  be_be_top1000.csv  bg_bg_top1000.csv  bo_bo_top1000.csv  br_br_top1000.csv  by_by_top1000.csv  ca_ca_top1000.csv  ch_ch_top1000.csv  cl_cl_top1000.csv  co_co_top1000.csv  cr_cr_top1000.csv  cy_cy_top1000.csv  cz_cz_top1000.csv  de_de_top1000.csv  dk_dk_top1000.csv  do_do_top1000.csv  ec_ec_top1000.csv  ee_ee_top1000.csv  eg_eg_top1000.csv  es_es_top1000.csv  fi_fi_top1000.csv  fr_fr_top1000.csv  gb_gb_top1000.csv  gr_gr_top1000.csv  gt_gt_top1000.csv  hk_hk_top1000.csv  hn_hn_top1000.csv  hu_hu_top1000.csv  (+45 more)
docs/: METHODOLOGY.md  SOURCES.md
scripts/: build_full_dataset.py  import_spotify_snapshot.py  publish_github.sh  update_manifest.py  verify_targets.py
tests/: test_countries.py  test_culturelists.py  test_dedupe.py  test_fullbuild.py  test_validate.py  test_vocaloid_vocadb.py
(+31 files in other folders)
