[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-megalist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1", "pydantic>=2.8,<3", "pandas>=2.2,<3",
  "pyarrow>=17,<20", "rapidfuzz>=3.9,<4", "beautifulsoup4>=4.12,<5",
  "lxml>=5.2,<6", "python-dateutil>=2.9,<3", "tenacity>=8.5,<10"
]

[project.scripts]
music-megalist = "music_megalist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
